Mar 20 2009 pjp <prasad@redhat.com>

	* Makefile.am: did append "version.h" to the dependencies of the targets
	  that required it.

	* byte_diff.c: did format it as per my taste of coding style.

	* query.c: Fixed a small bug I mistakenly introduced while formatting this
	  file. I removed a `pos = 0;' statement from line 552, thinking that pos
	  is getting initialised in the next statement, but that stopped dnscache
	  from processing `cname' type records and thus resolving names. It took me
	  whole day to figure that out. Anyway...lesson learned. :)

	* dnscache.c:
	  droproot.c:
	  pickdns.c:
	  rbldns.c:
	  tinydns.c:
	  walldns.c: Did add 'extern short debug_level' declaration to all these
	  files.

	* version.h: version changed to 1.05.2, not yet released though.

Mar 17 2009 pjp <prasad@redhat.com>

	* Makefile.am: changed to install `dnsip' command.

	* dnscache.c: changed to include the new "version.h" file. It defines
	  the VERSION macro.

	* dnsip.c: changed to process command line options with getopt, and
	  display help menu etc.

	* version.h: new file defines the VERSION macro.

	* alloc.c:
	  alloc.h:
	  buffer.c:
	  buffer.h:
	  buffer_1.c:
	  buffer_put.c:
	  buffer_write.c:
	  cache.c:
	  dd.c:
	  dnscache.c:
	  fmt_ulong.c:
	  iopause.c:
	  ip4.h:
	  ip4_fmt.c:
	  log.c:
	  okclient.c:
	  prot.c:
	  query.c:
	  roots.h:
	  str.h:
	  str_chr.c:
	  str_rchr.c: fixed the str_rchr() function to go from `end to start'
	  while looking for the given character.
	  
	  All the above files are formatted as per the coding style
	  convenient to me. Also did add the copyright disclaimer at the top.

Mar 13 2009 pjp <prasad@redhat.com>
	
	* response.c: patched with the latest Matthew Dempsky patch available
	  at: http://marc.info/?l=djbdns&m=123613000920446&w=2
		
		if (response_len < 16384) ...

	* Makefile.am: changed to install `dnstracesort' script.

	* dns_transmit.c: patched with the `d->pos = 0' and `char udpgbuf[4096]