@@ -1,0 +1,37 @@
+\"
+\" dnsip.1: This is a manuscript of the manual page for `dnsip'. This file is
+\" part of the `djbdns' project version 1.05.2.
+\"
+
+\" No hyphenation
+.hy 0
+.nr HY 0
+
+.TH dnsip 1
+dnsip - resolve a domain name
+
+.SH SYNOPSYS
+.TP 5
+\fBdnsip\fR [\fBOPTIONS\fR] <domain-name> [<domain-name> ...]
+
+.SH DESCRIPTION
+.PP
+\fBdnsip\fR serves the sole task of resolving a given domain-name to it's IPv4
+address. \fBdnsip\fR supports following options:
+
+.SH OPTIONS
+.TP
+.B \-h \-\-help
+ print this help
+.TP
+.B \-n \-\-new
+ use new output style
+.TP
+.B \-v \-\-version
+ print version information
+
+.SH BUGS
+Report bugs to <prasad@redhat.com>
+
+.SH AUTHOR
+Prasad J Pandit
